fix(package.json): Use a name that won't conflict with npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semver",
+  "name": "@clibs/semver",
   "version": "0.0.3-alpha",
   "description": "A C library for parsing version numbers according to the Semantic Versioning 2.0.0 specification.",
   "main": "index.js",
